Tidy code for modern Java versions